syntax = "proto2";

package test;

// java
option java_multiple_files = true;
option java_outer_classname = "Protos";
option java_package = "com.test.protobuf";


// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message conteining name
message HelloRequest {
    required string name = 1;
}

// The response message containing the greetings
message HelloReply {
    required string greeting = 1;
}